# libjs.net

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  initialize.bat  initialize.sh  patch.bat  try-dotnet.sh  vcpkg.json
.github/: install-llvm.ps1
.github/workflows/: build.yml
AK/: Demangle.h
dotnet/: Bind.cs  LibJS.cs  Program.cs  dotnet.sln
dotnet/LibJS/: Array.cs  Document.cs  Environment.cs  Exceptions.cs  Global.cs  Object.cs  Tags.cs  Value.cs
dotnet/Properties/: launchSettings.json
patches/: AK_BumpAllocator.h.patch  Libraries_LibJS_AST.h.patch  Libraries_LibJS_Runtime_Error.h.patch  Libraries_LibJS_Runtime_VM.cpp.patch
src/: Document.cpp  Document.h  Environment.cpp  Environment.h  EnvironmentSettingsObject.cpp  EnvironmentSettingsObject.h  ExternError.cpp  ExternError.h  Forward.h  LibJS.cpp  LibJS.h  LogClient.cpp  LogClient.h  MainThreadVM.cpp  MainThreadVM.h  Object.cpp  Object.h  PrincipalHostDefined.cpp  PrincipalHostDefined.h  Script.cpp  Script.h  StandardIOStream.cpp  StandardIOStream.h  Value.cpp  Value.h  Window.cpp  Window.h  Wrapper.cpp  Wrapper.h
src/AK/: Demangle.h
src/examples/: Environment.cpp.old  Environment.h.old  LibJS.cpp.old  LibJS.h.old  StandardIOStream.h.old
src/temp/: Timer.cpp.e  Timer.h.e
